# congressMCP

./: .env.backup  .env.essential  .env.example  .env.high_value  .env.template  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  asgi.py  congress_mcp_server.py  congress_mcp_server.py.bak  congress_mcp_server_enhanced.py  congress_mcp_server_improved.py  heroku_server.py  llms-install.md  mcp_proxy.py  production_server.py  pyproject.toml  requirements.txt  run_server.py  send_test_email.py  server.sh  setup_email.py  setup_live_env.md  smithery.yaml  supabase_magic_links_update.sql  supabase_schema.sql  test_async_database_fix.py  test_email_service.py  test_upgrade_email.py
congress_api/: .dockerignore  Dockerfile  __init__.py  __main__.py  main.py  mcp_app.py  mcp_server.py  prompts_module.py  rest_api.py  smithery.yaml
documentation/: API_ENHANCEMENT_TEMPLATE.md  API_RELIABILITY_GUIDE.md  CongressAPI_documentation.md  FEATURE_MANAGEMENT.md  TOOL_CONSOLIDATION_PLAN.md  lawgiver_auth_stripe_summary.md  lawgiver_mcp_overview.md  mcp_pythonSDK_readme.md  mcp_with_llms.txt  registration_frontend_plan.md  supabase_setup.md
scripts/: init_database.py  manage_features.py  top_users_by_usage.sql  upgrade_user.py
tests/: run_amendments_tests.py  send_test_email.py  test_amendments_functionality.py  test_chamber_param_fix.py  test_committee_intelligence_hub_bucket.py  test_email_service.py  test_email_templates.py  test_legislation_hub_bucket.py  test_people_relationships_hub_bucket.py  test_records_communications_hub_bucket.py  test_registration_endpoint.py  test_research_professional_hub_bucket.py  test_upgrade_email.py  test_user_creation.py  (+1 more)
(+77 files in other folders)
